# small_gicp_ros2

./: CMakeLists.txt  package.xml
include/small_gicp/registration/: optimizer.hpp  registration_result.hpp
launch/: ndt_scan_matcher.launch.xml
rviz/: autoware.rviz
src/: small_gicp_ros2.cpp
