<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">  
  <name>small_gicp_ros2</name>
  <version>1.0.0</version>
  <description>Efficient and parallelized algorithms for point cloud registration</description>

  <maintainer email="k.koide@aist.go.jp">Kenji Koide</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>
  <depend>libomp-dev</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>autoware_internal_debug_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <!-- optional -->
  <!-- <depend>libpcl-all-dev</depend> -->
  <!-- <depend>tbb</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
